[metadata]
name = queuectl
version = 1.0.0
description = CLI-based background job queue system
long_description = file: README.md
long_description_content_type = text/markdown
author = Student
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
install_requires =
    typer>=0.9.0
    rich>=13.0.0

[options.extras_require]
dev =
    pytest>=7.4.0

[options.entry_points]
console_scripts =
    queuectl = queuectl.cli:app

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist
